Remove mobile view and fix temperature positioning - Move temperature to left corner - Remove all mobile-specific CSS and responsive design - Fix 12-hour weather display issue - Optimize for desktop-first design

--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "dependencies": {
+    "lottie-web": "^5.13.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^5.1.0"
   }
 }
